fix settings dialog width on small screens and adjust others

--- a/public/stylesheets/less/rp-settings.less
+++ b/public/stylesheets/less/rp-settings.less
@@ -17,3 +17,16 @@
 .rp-setting-inset {
     min-width: 60%;
 }
+
+.rp-settings-dialog {
+    max-width: 95% !important;
+    @media (min-width: @layout-xs) {
+        max-width: 75% !important;
+    }
+    @media (min-width: @layout-sm) {
+        max-width: 50% !important;
+    }
+    @media (min-width: @layout-md) {
+        max-width: 40% !important;
+    }
+}
